--- a/kadai_006/index_for_student.html
+++ b/kadai_006/index_for_student.html
@@ -85,49 +85,11 @@
 
       <!-- ここからコードを変更しカードデザインに変更してください -->
       <div class="row row-cols-1 row-cols-md-4 g-4">
-          <div class="col">
+        <div class="col">
+          <div class="card">
             <img src="img/sushi.jpg" class="card-img-top" alt="サンプル画像3">
             <div class="card-body">
-              <h2 class="card-title">First featurette heading. </h2>
-              <p class="card-text">It'll blow your mind.</p>
-              <p class="card-text"><small class="text-muted">Donec ullamcorper nulla non metus auctor fringilla.
-                  Vestibulum id ligula porta felis
-                  euismod
-                  semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac
-                  cursus
-                  commodo.</small></p>
-            </div>
-          </div>
-          <div class="col">
-            <img src="img/sushi.jpg" class="card-img-top" alt="サンプル画像3">
-            <div class="card-body">
-              <h2 class="card-title">First featurette heading. </h2>
-              <p class="card-text">It'll blow your mind.</p>
-              <p class="card-text"><small class="text-muted">Donec ullamcorper nulla non metus auctor fringilla.
-                  Vestibulum id ligula porta felis
-                  euismod
-                  semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac
-                  cursus
-                  commodo.</small></p>
-            </div>
-          </div>
-          <div class="col">
-            <img src="img/sushi.jpg" class="card-img-top" alt="サンプル画像3">
-            <div class="card-body">
-              <h2 class="card-title">First featurette heading. </h2>
-              <p class="card-text">It'll blow your mind.</p>
-              <p class="card-text"><small class="text-muted">Donec ullamcorper nulla non metus auctor fringilla.
-                  Vestibulum id ligula porta felis
-                  euismod
-                  semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac
-                  cursus
-                  commodo.</small></p>
-            </div>
-          </div>
-                    <div class="col">
-            <img src="img/sushi.jpg" class="card-img-top" alt="サンプル画像3">
-            <div class="card-body">
-              <h2 class="card-title">First featurette heading. </h2>
+              <h5 class="card-title">First featurette heading. </h5>
               <p class="card-text">It'll blow your mind.</p>
               <p class="card-text"><small class="text-muted">Donec ullamcorper nulla non metus auctor fringilla.
                   Vestibulum id ligula porta felis
@@ -138,16 +100,62 @@
             </div>
           </div>
         </div>
-
-        <!-- お寿司部分終了 -->
-
-
-        <hr class="featurette-divider">
-        <footer class="container">
-          <!-- <p class="float-end"><a href="#">Back to top</a></p> -->
-          <p class=""><a href="#">Back to top</a></p>
-        </footer>
+        <div class="col">
+          <div class="card">
+            <img src="img/sushi.jpg" class="card-img-top" alt="サンプル画像3">
+            <div class="card-body">
+              <h5 class="card-title">First featurette heading. </h5>
+              <p class="card-text">It'll blow your mind.</p>
+              <p class="card-text"><small class="text-muted">Donec ullamcorper nulla non metus auctor fringilla.
+                  Vestibulum id ligula porta felis
+                  euismod
+                  semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac
+                  cursus
+                  commodo.</small></p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="img/sushi.jpg" class="card-img-top" alt="サンプル画像3">
+            <div class="card-body">
+              <h5 class="card-title">First featurette heading. </h5>
+              <p class="card-text">It'll blow your mind.</p>
+              <p class="card-text"><small class="text-muted">Donec ullamcorper nulla non metus auctor fringilla.
+                  Vestibulum id ligula porta felis
+                  euismod
+                  semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac
+                  cursus
+                  commodo.</small></p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="img/sushi.jpg" class="card-img-top" alt="サンプル画像3">
+            <div class="card-body">
+              <h5 class="card-title">First featurette heading. </h5>
+              <p class="card-text">It'll blow your mind.</p>
+              <p class="card-text"><small class="text-muted">Donec ullamcorper nulla non metus auctor fringilla.
+                  Vestibulum id ligula porta felis
+                  euismod
+                  semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac
+                  cursus
+                  commodo.</small></p>
+            </div>
+          </div>
+        </div>
       </div>
+
+      <!-- お寿司部分終了 -->
+
+
+      <hr class="featurette-divider">
+      <footer class="container">
+        <!-- <p class="float-end"><a href="#">Back to top</a></p> -->
+        <p class=""><a href="#">Back to top</a></p>
+      </footer>
+    </div>
   </main>
 </body>
 
